# src/common/responses/response.ts
@@ -8,3 +8,19 @@ export const success = <T>(data: T): ApiResponse<T> => ({
   error: null,
   data,
 });
+
+export interface ErrorDetail {
+  errorCode: string;
+  reason: string;
+  data: unknown;
+}
+
+export interface FailResponse<T = null> {
+  resultType: "FAIL";
+  error: {
+    errorCode: string;
+    reason: string;
+    data: T;
+  };
+  data: null;
+}
